--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
         <p class="title is-4 mt-5">John Smith</p>
         <p class="subtitle is-6">@johnsmith</p>
         <div class="contacts">
-          <!-- m.mail@example.com -->
-          <!-- +12345678 -->
+          <a href="mailto:johnsmith@mail.com">Mail</a>
+          <a href="tel:+154587894">Phone</a>
         </div>
       </div>
     </div>
